add: gallery section

--- a/index.html
+++ b/index.html
@@ -56,5 +56,32 @@
         </div>
       </section>
 
+      <!-- GALLERY SECTION -->
+
+      <section class="gallery">
+        <h1 class="gallery__title">Lower sugar recipes</h1>
+        <p class="gallery__text">As we go about our hectic, busy days, it can be very easy to resort to a sugary snack midway through the afternoon to keep your energy levels elevated</p>
+        <div class="gallery__container">
+          <div class="gallery__img">
+            <img src="/images/gallery-1.jpeg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="/images/gallery-2.jpeg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="/images/gallery-3.jpeg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="/images/gallery-4.jpeg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="/images/gallery-5.jpeg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="/images/gallery-6.jpeg" alt="">
+          </div>
+        </div>
+      </section>
+
   </body>
 </html>
