add: ideas section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main class="main">
       <div class="main__wrapper">
-        <h1 class="main__title">Ways to <br>manage sugar</h1>
+        <h1 class="main__title">Ways to <br />manage sugar</h1>
         <p class="main__text">
           As we go about our hectic, busy days, it can be very easy to resort to
           a sugary snack midway through the afternoon to keep your energy levels
@@ -32,56 +32,116 @@
       </div>
     </main>
 
-      <!-- INFO SECTION -->
+    <!-- INFO SECTION -->
 
-      <section class="info">
-        <div class="info__wrapper">
-          <div class="info__card">
-            <i class='bx bxs-drink info__icon'></i>
-            <h3 class="info__title">Drink apple cider vinegar</h3>
-            <p class="info__text">According to Sepel, adding one or two tablespoons of apple cider vinegar to a large bottle of water</p>
+    <section class="info">
+      <div class="info__wrapper">
+        <div class="info__card">
+          <i class="bx bxs-drink info__icon"></i>
+          <h3 class="info__title">Drink apple cider vinegar</h3>
+          <p class="info__text">
+            According to Sepel, adding one or two tablespoons of apple cider
+            vinegar to a large bottle of water
+          </p>
+        </div>
+
+        <div class="info__card">
+          <i class="bx bxs-bowl-hot info__icon"></i>
+          <h3 class="info__title">Keep to regular mealtimes</h3>
+          <p class="info__text">
+            This may seem like an obvious suggestion, but eating your meals at
+            regular, spaced out intervals
+          </p>
+        </div>
+
+        <div class="info__card">
+          <i class="bx bx-lemon info__icon"></i>
+          <h3 class="info__title">Eat fruit in the morning</h3>
+          <p class="info__text">
+            We're told that we should eat five portions of fruits and vegetables
+            a day in an effort to maintain a healthy lifestyle.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- GALLERY SECTION -->
+
+    <section class="gallery">
+      <h1 class="gallery__title">Lower sugar recipes</h1>
+      <p class="gallery__text">
+        As we go about our hectic, busy days, it can be very easy to resort to a
+        sugary snack midway through the afternoon to keep your energy levels
+        elevated
+      </p>
+      <div class="gallery__container">
+        <div class="gallery__img">
+          <img src="/images/gallery-1.jpeg" alt="" />
+        </div>
+        <div class="gallery__img">
+          <img src="/images/gallery-2.jpeg" alt="" />
+        </div>
+        <div class="gallery__img">
+          <img src="/images/gallery-3.jpeg" alt="" />
+        </div>
+        <div class="gallery__img">
+          <img src="/images/gallery-4.jpeg" alt="" />
+        </div>
+        <div class="gallery__img">
+          <img src="/images/gallery-5.jpeg" alt="" />
+        </div>
+        <div class="gallery__img">
+          <img src="/images/gallery-6.jpeg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!-- IDEAS SECTION -->
+
+    <section class="ideas">
+      <div class="ideas__wrapper">
+        <h1 class="ideas__title">New ideas to life</h1>
+        <p class="ideas__text">
+          Eating a healthy dose of protein, such as red meat, organic chicken
+          and fish, in addition to healthy fats including avocado and coconut
+          oil can help keep
+        </p>
+
+        <div class="ideas__container">
+          <div class="ideas__card">
+            <h3 class="ideas__card--title">Eat wholesome snacks</h3>
+            <p class="ideas__card--text">
+              One of the reasons why so many people end up eating unhealthy
+              snacks is simply because they don’t consider taking the time to
+              source healthier alternatives.
+            </p>
           </div>
-          
-          <div class="info__card">
-            <i class='bx bxs-bowl-hot info__icon'></i>
-            <h3 class="info__title">Keep to regular mealtimes</h3>
-            <p class="info__text">This may seem like an obvious suggestion, but eating your meals at regular, spaced out intervals</p>
+          <div class="ideas__card">
+            <h3 class="ideas__card--title">Consume magnesium</h3>
+            <p class="ideas__card--text">
+              Sepel is a strong proponent of magnesium, personally taking
+              approximately 500mg a night to help moderate her blood glucose
+              levels. Magnesium can also be naturally found
+            </p>
           </div>
-          
-          <div class="info__card">
-            <i class='bx bx-lemon info__icon'></i>
-            <h3 class="info__title">Eat fruit in the morning</h3>
-            <p class="info__text">We're told that we should eat five portions of fruits and vegetables a day in an effort to maintain a healthy lifestyle.</p>
+          <div class="ideas__card">
+            <h3 class="ideas__card--title">Practise mindfulness</h3>
+            <p class="ideas__card--text">
+              Sugar cravings are often connected with overall stress levels,
+              which is why practising mindfulness could prove extremely
+              beneficial. Take some time out of
+            </p>
+          </div>
+          <div class="ideas__card">
+            <h3 class="ideas__card--title">Eat plenty of protein</h3>
+            <p class="ideas__card--text">
+              Eating a healthy dose of protein, such as red meat, organic chicken and fish, in addition to healthy fats including avocado and coconut oil can help keep 
+            </p>
           </div>
         </div>
-      </section>
 
-      <!-- GALLERY SECTION -->
-
-      <section class="gallery">
-        <h1 class="gallery__title">Lower sugar recipes</h1>
-        <p class="gallery__text">As we go about our hectic, busy days, it can be very easy to resort to a sugary snack midway through the afternoon to keep your energy levels elevated</p>
-        <div class="gallery__container">
-          <div class="gallery__img">
-            <img src="/images/gallery-1.jpeg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="/images/gallery-2.jpeg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="/images/gallery-3.jpeg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="/images/gallery-4.jpeg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="/images/gallery-5.jpeg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="/images/gallery-6.jpeg" alt="">
-          </div>
-        </div>
-      </section>
-
+        <button class="btn ideas__btn">Read More</button>
+      </div>
+    </section>
   </body>
 </html>
