add: options section

--- a/index.html
+++ b/index.html
@@ -135,12 +135,43 @@
           <div class="ideas__card">
             <h3 class="ideas__card--title">Eat plenty of protein</h3>
             <p class="ideas__card--text">
-              Eating a healthy dose of protein, such as red meat, organic chicken and fish, in addition to healthy fats including avocado and coconut oil can help keep 
+              Eating a healthy dose of protein, such as red meat, organic
+              chicken and fish, in addition to healthy fats including avocado
+              and coconut oil can help keep
             </p>
           </div>
         </div>
 
         <button class="btn ideas__btn">Read More</button>
+      </div>
+    </section>
+
+    <!-- OPTIONS SECTION -->
+
+    <section class="options">
+      <div class="options__card">
+        <div class="options__img img__1"></div>
+        <div class="options__content">
+          <h3 class="options__content--title">
+            Have a healthy afternoon snack
+          </h3>
+          <p class="options__content--text">
+            The majority of people in the working world are likely familiar with
+            the mid-afternoon slump.
+          </p>
+        </div>
+      </div>
+      <div class="options__card">
+        <div class="options__img img__2"></div>
+        <div class="options__content">
+          <h1 class="options__content--title">
+            Include lots of fibre in your diet
+          </h1>
+          <p class="options__content--text">
+            Fibre is known to help aid with digestion. However, that’s not its
+            only benefit.
+          </p>
+        </div>
       </div>
     </section>
   </body>
