add: health section

--- a/index.html
+++ b/index.html
@@ -174,5 +174,32 @@
         </div>
       </div>
     </section>
+
+    <!-- HEALTH SECTION -->
+
+    <section class="health">
+      <div class="health__img"></div>
+      <div class="health__content">
+        <div class="health__wrapper">
+          <h1 class="health__title">Health is the most precious</h1>
+          <p class="health__text">
+            While it is important to have naturally occurring sugars in your
+            diet, many foods contain harmful added sugars that contain no
+            nutritional value.
+          </p>
+          <p class="health__text">
+            According to a study conducted by the University of Florida, the
+            brain releases heroin-like chemicals called endogenous opioids when
+            an individual indulges on sweet, salty or fatty foods.
+          </p>
+          <p class="health__text">
+            With that in mind, mastering control over your sugar cravings is
+            evidently far easier said than done.
+          </p>
+
+          <button class="btn">Read More</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
